Refactor driver service